@@ -627,7 +627,7 @@
                 <configuration>
                     <rules>
                         <requireMavenVersion>
-                            <version>[3.9.6]</version>
+                            <version>[3.9.6,)</version>
                         </requireMavenVersion>
                     </rules>
                 </configuration>
@@ -1082,6 +1082,7 @@
                                 --add-opens=java.base/java.time=ALL-UNNAMED
                                 --add-opens=java.base/java.text=ALL-UNNAMED
                                 --add-opens=java.base/java.security=ALL-UNNAMED
+                                --add-opens=java.logging/java.util.logging=ALL-UNNAMED
                                 --add-opens=java.management/sun.management=ALL-UNNAMED
                                 --add-opens java.desktop/java.awt.font=ALL-UNNAMED
                                 --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
